<resources>
    <!-- App metadata -->
    <string name="app_name">Merch</string>

    <!-- Login screen -->
    <string name="email_text">Email</string>
    <string name="email_prompt">Enter your email</string>
    <string name="password_text">Password</string>
    <string name="password_prompt">Enter your Password</string>
    <string name="login_new">Register</string>
    <string name="login_existing">Login</string>

    <!-- Onboarding screen -->
    <string name="nets_logo">The Brooklyn Nets B logo</string>
    <string name="welcome_txt">Welcome to the Brooklyn Nets Merchandise App</string>
    <string name="shop_txt">Shop your favorite Nets gear and your favorite players jerseys</string>
    <string name="instructions_btn">Instructions</string>

    <!-- Instructions screen -->
    <string name="instructions_txt">Instructions</string>
    <string name="instructions_1_txt">Explore all the Nets merchandise through the listings screen</string>
    <string name="instructions_2_txt">Add new items to the Listings via Add New button in the Listings screen</string>
    <string name="instructions_3_txt">Have fun, Let\'s go Nets!</string>
    <string name="merch_list_btn">Merch List</string>

    <!-- Listings screen -->
    <string name="merch_listings">Merch Listings</string>
    <string name="add_new_description">Adds new item</string>
    <string name="size_listings">Size: </string>
    <string name="description_listings">Description: </string>
    <string name="company_listings">Company: </string>

    <!-- Menu -->
    <string name="logout_menu_item">Logout</string>

    <!-- Add New screen -->
    <string name="add_new">Add New</string>
    <string name="name_text">Name</string>
    <string name="size_text">Size</string>
    <string name="description_text">Description</string>
    <string name="company_text">Company</string>

    <!-- Buttons -->
    <string name="cancel_btn">Cancel</string>
    <string name="save_btn">Save</string>

    <!-- EditTexts Hints -->
    <string name="enter_name_hint">Enter merch name</string>
    <string name="company_name_hint">Enter company name</string>
    <string name="size_hint">Enter the size</string>
    <string name="description_hint">Enter merch description</string>
    <string name="instructions_menu_item">Instructions</string>


</resources>